input/queue-manager/k8s/queue-manager-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: queue-manager
  namespace: stf
spec:
  serviceName: queue-manager
  replicas: 1
  selector:
    matchLabels:
      app: queue-manager
  template:
    metadata:
      labels:
        app: queue-manager
    spec:
      serviceAccountName: full-access-sa
      containers:
        - name: queue-manager
          image: registry.dmz.home/streamforge/queue-manager:v2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: ca-cert
              mountPath: /usr/local/share/ca-certificates/ca.crt
              subPath: ca.crt
      volumes:
        - name: ca-cert
          configMap:
            name: home-certificates
      nodeSelector:
        streamforge-node: "true"
