input/queue-manager/k8s/queue-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queue-manager
  namespace: stf
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - queue-manager.dmz.home
      secretName: queue-manager-tls
  rules:
    - host: queue-manager.dmz.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: queue-manager
                port:
                  number: 8000
